fix find files in 'JSON Compilation Database' if file names are upper case on linux
convert files in JSON Compilation Database to lower case because unifyPath() converted file names to lower case